[gd_scene load_steps=145 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tower.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/towerselector.png" type="Texture" id=3]
[ext_resource path="res://Assets/FireTowerv1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Map1.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/health bar back.png" type="Texture" id=6]
[ext_resource path="res://Assets/crystal_anim/render009.png" type="Texture" id=7]
[ext_resource path="res://Assets/crystal_anim/render015.png" type="Texture" id=8]
[ext_resource path="res://Assets/crystal_anim/render003.png" type="Texture" id=9]
[ext_resource path="res://Assets/crystal_anim/render013.png" type="Texture" id=10]
[ext_resource path="res://Assets/crystal_anim/render011.png" type="Texture" id=11]
[ext_resource path="res://Assets/crystal_anim/render064.png" type="Texture" id=12]
[ext_resource path="res://Assets/crystal_anim/render012.png" type="Texture" id=13]
[ext_resource path="res://Assets/crystal_anim/render010.png" type="Texture" id=14]
[ext_resource path="res://Assets/health bar.png" type="Texture" id=15]
[ext_resource path="res://Assets/crystal_anim/render092.png" type="Texture" id=16]
[ext_resource path="res://Assets/crystal_anim/render106.png" type="Texture" id=17]
[ext_resource path="res://Assets/crystal_anim/render110.png" type="Texture" id=18]
[ext_resource path="res://Assets/crystal_anim/render094.png" type="Texture" id=19]
[ext_resource path="res://Assets/crystal_anim/render104.png" type="Texture" id=20]
[ext_resource path="res://Assets/crystal_anim/render114.png" type="Texture" id=21]
[ext_resource path="res://Assets/crystal_anim/render060.png" type="Texture" id=22]
[ext_resource path="res://Assets/crystal_anim/render077.png" type="Texture" id=23]
[ext_resource path="res://Assets/crystal_anim/render091.png" type="Texture" id=24]
[ext_resource path="res://Assets/crystal_anim/render093.png" type="Texture" id=25]
[ext_resource path="res://Assets/crystal_anim/render089.png" type="Texture" id=26]
[ext_resource path="res://Assets/crystal_anim/render090.png" type="Texture" id=27]
[ext_resource path="res://Assets/crystal_anim/render070.png" type="Texture" id=28]
[ext_resource path="res://Assets/crystal_anim/render101.png" type="Texture" id=29]
[ext_resource path="res://Assets/crystal_anim/render100.png" type="Texture" id=30]
[ext_resource path="res://Assets/crystal_anim/render085.png" type="Texture" id=31]
[ext_resource path="res://Assets/crystal_anim/render095.png" type="Texture" id=32]
[ext_resource path="res://Assets/crystal_anim/render111.png" type="Texture" id=33]
[ext_resource path="res://Assets/crystal_anim/render088.png" type="Texture" id=34]
[ext_resource path="res://Assets/crystal_anim/render065.png" type="Texture" id=35]
[ext_resource path="res://Assets/crystal_anim/render115.png" type="Texture" id=36]
[ext_resource path="res://Assets/crystal_anim/render105.png" type="Texture" id=37]
[ext_resource path="res://Assets/crystal_anim/render061.png" type="Texture" id=38]
[ext_resource path="res://Assets/crystal_anim/render084.png" type="Texture" id=39]
[ext_resource path="res://Assets/crystal_anim/render062.png" type="Texture" id=40]
[ext_resource path="res://Assets/crystal_anim/render063.png" type="Texture" id=41]
[ext_resource path="res://Assets/crystal_anim/render113.png" type="Texture" id=42]
[ext_resource path="res://Assets/crystal_anim/render112.png" type="Texture" id=43]
[ext_resource path="res://Assets/crystal_anim/render103.png" type="Texture" id=44]
[ext_resource path="res://Assets/crystal_anim/render086.png" type="Texture" id=45]
[ext_resource path="res://Assets/crystal_anim/render116.png" type="Texture" id=46]
[ext_resource path="res://Assets/crystal_anim/render108.png" type="Texture" id=47]
[ext_resource path="res://Assets/crystal_anim/render117.png" type="Texture" id=48]
[ext_resource path="res://Assets/crystal_anim/render087.png" type="Texture" id=49]
[ext_resource path="res://Assets/crystal_anim/render119.png" type="Texture" id=50]
[ext_resource path="res://Assets/crystal_anim/render098.png" type="Texture" id=51]
[ext_resource path="res://Assets/crystal_anim/render107.png" type="Texture" id=52]
[ext_resource path="res://Assets/crystal_anim/render109.png" type="Texture" id=53]
[ext_resource path="res://Assets/crystal_anim/render118.png" type="Texture" id=54]
[ext_resource path="res://Assets/crystal_anim/render097.png" type="Texture" id=55]
[ext_resource path="res://Assets/crystal_anim/render102.png" type="Texture" id=56]
[ext_resource path="res://Assets/crystal_anim/render099.png" type="Texture" id=57]
[ext_resource path="res://Assets/crystal_anim/render096.png" type="Texture" id=58]
[ext_resource path="res://Assets/crystal_anim/render037.png" type="Texture" id=59]
[ext_resource path="res://Assets/crystal_anim/render047.png" type="Texture" id=60]
[ext_resource path="res://Assets/crystal_anim/render056.png" type="Texture" id=61]
[ext_resource path="res://Assets/crystal_anim/render054.png" type="Texture" id=62]
[ext_resource path="res://Assets/crystal_anim/render014.png" type="Texture" id=63]
[ext_resource path="res://Assets/crystal_anim/render033.png" type="Texture" id=64]
[ext_resource path="res://Assets/crystal_anim/render007.png" type="Texture" id=65]
[ext_resource path="res://Assets/crystal_anim/render042.png" type="Texture" id=66]
[ext_resource path="res://Assets/crystal_anim/render034.png" type="Texture" id=67]
[ext_resource path="res://Assets/crystal_anim/render035.png" type="Texture" id=68]
[ext_resource path="res://Assets/crystal_anim/render058.png" type="Texture" id=69]
[ext_resource path="res://Assets/crystal_anim/render002.png" type="Texture" id=70]
[ext_resource path="res://Assets/crystal_anim/render041.png" type="Texture" id=71]
[ext_resource path="res://Assets/crystal_anim/render045.png" type="Texture" id=72]
[ext_resource path="res://Assets/crystal_anim/render038.png" type="Texture" id=73]
[ext_resource path="res://Assets/crystal_anim/render051.png" type="Texture" id=74]
[ext_resource path="res://Assets/crystal_anim/render052.png" type="Texture" id=75]
[ext_resource path="res://Assets/crystal_anim/render046.png" type="Texture" id=76]
[ext_resource path="res://Assets/crystal_anim/render008.png" type="Texture" id=77]
[ext_resource path="res://Assets/crystal_anim/render039.png" type="Texture" id=78]
[ext_resource path="res://Assets/crystal_anim/render040.png" type="Texture" id=79]
[ext_resource path="res://Assets/crystal_anim/render000.png" type="Texture" id=80]
[ext_resource path="res://Assets/crystal_anim/render049.png" type="Texture" id=81]
[ext_resource path="res://Assets/crystal_anim/render044.png" type="Texture" id=82]
[ext_resource path="res://Assets/crystal_anim/render053.png" type="Texture" id=83]
[ext_resource path="res://Assets/crystal_anim/render059.png" type="Texture" id=84]
[ext_resource path="res://Assets/crystal_anim/render004.png" type="Texture" id=85]
[ext_resource path="res://Assets/crystal_anim/render043.png" type="Texture" id=86]
[ext_resource path="res://Assets/crystal_anim/render055.png" type="Texture" id=87]
[ext_resource path="res://Assets/crystal_anim/render057.png" type="Texture" id=88]
[ext_resource path="res://Assets/crystal_anim/render036.png" type="Texture" id=89]
[ext_resource path="res://Assets/crystal_anim/render001.png" type="Texture" id=90]
[ext_resource path="res://Assets/crystal_anim/render006.png" type="Texture" id=91]
[ext_resource path="res://Assets/crystal_anim/render048.png" type="Texture" id=92]
[ext_resource path="res://Assets/crystal_anim/render005.png" type="Texture" id=93]
[ext_resource path="res://Assets/crystal_anim/render074.png" type="Texture" id=94]
[ext_resource path="res://Assets/crystal_anim/render066.png" type="Texture" id=95]
[ext_resource path="res://Assets/crystal_anim/render028.png" type="Texture" id=96]
[ext_resource path="res://Assets/crystal_anim/render073.png" type="Texture" id=97]
[ext_resource path="res://Assets/crystal_anim/render076.png" type="Texture" id=98]
[ext_resource path="res://Assets/crystal_anim/render080.png" type="Texture" id=99]
[ext_resource path="res://Assets/crystal_anim/render081.png" type="Texture" id=100]
[ext_resource path="res://Assets/crystal_anim/render083.png" type="Texture" id=101]
[ext_resource path="res://Assets/crystal_anim/render067.png" type="Texture" id=102]
[ext_resource path="res://Assets/crystal_anim/render071.png" type="Texture" id=103]
[ext_resource path="res://Assets/crystal_anim/render082.png" type="Texture" id=104]
[ext_resource path="res://Assets/crystal_anim/render079.png" type="Texture" id=105]
[ext_resource path="res://Assets/crystal_anim/render068.png" type="Texture" id=106]
[ext_resource path="res://Assets/crystal_anim/render072.png" type="Texture" id=107]
[ext_resource path="res://Assets/crystal_anim/render078.png" type="Texture" id=108]
[ext_resource path="res://Assets/crystal_anim/render069.png" type="Texture" id=109]
[ext_resource path="res://Assets/crystal_anim/render075.png" type="Texture" id=110]
[ext_resource path="res://Assets/crystal_anim/render027.png" type="Texture" id=111]
[ext_resource path="res://Assets/crystal_anim/render026.png" type="Texture" id=112]
[ext_resource path="res://Assets/crystal_anim/render016.png" type="Texture" id=113]
[ext_resource path="res://Assets/crystal_anim/render029.png" type="Texture" id=114]
[ext_resource path="res://Assets/crystal_anim/render032.png" type="Texture" id=115]
[ext_resource path="res://Assets/crystal_anim/render023.png" type="Texture" id=116]
[ext_resource path="res://Assets/crystal_anim/render019.png" type="Texture" id=117]
[ext_resource path="res://Assets/crystal_anim/render025.png" type="Texture" id=118]
[ext_resource path="res://Assets/crystal_anim/render022.png" type="Texture" id=119]
[ext_resource path="res://Assets/crystal_anim/render018.png" type="Texture" id=120]
[ext_resource path="res://Assets/crystal_anim/render020.png" type="Texture" id=121]
[ext_resource path="res://Assets/crystal_anim/render050.png" type="Texture" id=122]
[ext_resource path="res://Assets/crystal_anim/render030.png" type="Texture" id=123]
[ext_resource path="res://Assets/crystal_anim/render031.png" type="Texture" id=124]
[ext_resource path="res://Assets/crystal_anim/render024.png" type="Texture" id=125]
[ext_resource path="res://Assets/crystal_anim/render021.png" type="Texture" id=126]
[ext_resource path="res://Assets/crystal_anim/render017.png" type="Texture" id=127]
[ext_resource path="res://Assets/bg.png" type="Texture" id=128]
[ext_resource path="res://Assets/gold.png" type="Texture" id=129]
[ext_resource path="res://Scenes/GUI.gd" type="Script" id=130]
[ext_resource path="res://Assets/bt_back.png" type="Texture" id=131]
[ext_resource path="res://Assets/setting_butt.png" type="Texture" id=132]
[ext_resource path="res://Assets/fonts/Fredok36.tres" type="DynamicFont" id=133]
[ext_resource path="res://Assets/bt_up.png" type="Texture" id=134]
[ext_resource path="res://Assets/fonts/arial.ttf" type="DynamicFontData" id=135]
[ext_resource path="res://Assets/fonts/arialbd.ttf" type="DynamicFontData" id=136]
[ext_resource path="res://Assets/menu_back.png" type="Texture" id=137]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -38, 39, -23.0631, -6.68217, 23.0631, 6.68217, 317, 34, 0, 0, 0, 0, 336, 353, 0, 0, 0, 0, 843, 355, 0, 0, 0, 0, 846, 167, 0, 0, 0, 0, 1142, 165 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 80 ), ExtResource( 90 ), ExtResource( 70 ), ExtResource( 9 ), ExtResource( 85 ), ExtResource( 93 ), ExtResource( 91 ), ExtResource( 65 ), ExtResource( 77 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 63 ), ExtResource( 8 ), ExtResource( 113 ), ExtResource( 127 ), ExtResource( 120 ), ExtResource( 117 ), ExtResource( 121 ), ExtResource( 126 ), ExtResource( 119 ), ExtResource( 116 ), ExtResource( 125 ), ExtResource( 118 ), ExtResource( 112 ), ExtResource( 111 ), ExtResource( 96 ), ExtResource( 114 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 115 ), ExtResource( 64 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 89 ), ExtResource( 59 ), ExtResource( 73 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 71 ), ExtResource( 66 ), ExtResource( 86 ), ExtResource( 82 ), ExtResource( 72 ), ExtResource( 76 ), ExtResource( 60 ), ExtResource( 92 ), ExtResource( 81 ), ExtResource( 122 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 83 ), ExtResource( 62 ), ExtResource( 87 ), ExtResource( 61 ), ExtResource( 88 ), ExtResource( 69 ), ExtResource( 84 ), ExtResource( 22 ), ExtResource( 38 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 12 ), ExtResource( 35 ), ExtResource( 95 ), ExtResource( 102 ), ExtResource( 106 ), ExtResource( 109 ), ExtResource( 28 ), ExtResource( 103 ), ExtResource( 107 ), ExtResource( 97 ), ExtResource( 94 ), ExtResource( 110 ), ExtResource( 98 ), ExtResource( 23 ), ExtResource( 108 ), ExtResource( 105 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 104 ), ExtResource( 101 ), ExtResource( 39 ), ExtResource( 31 ), ExtResource( 45 ), ExtResource( 49 ), ExtResource( 34 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 16 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 32 ), ExtResource( 58 ), ExtResource( 55 ), ExtResource( 51 ), ExtResource( 57 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 56 ), ExtResource( 44 ), ExtResource( 20 ), ExtResource( 37 ), ExtResource( 17 ), ExtResource( 52 ), ExtResource( 47 ), ExtResource( 53 ), ExtResource( 18 ), ExtResource( 33 ), ExtResource( 43 ), ExtResource( 42 ), ExtResource( 21 ), ExtResource( 36 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 54 ), ExtResource( 50 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 136 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 135 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 75, 55.5 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Map1" parent="." instance=ExtResource( 5 )]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( -41, 123 )
curve = SubResource( 1 )

[node name="WaveTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyTimer" type="Timer" parent="."]

[node name="Tower" parent="." instance=ExtResource( 2 )]
position = Vector2( 229, 224 )

[node name="GUI" type="CanvasLayer" parent="."]
script = ExtResource( 130 )

[node name="ColorRect" type="ColorRect" parent="GUI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_top = -96.0
margin_right = 8.0
margin_bottom = 11.0
color = Color( 0.164706, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerSpawn" type="TextureButton" parent="GUI/ColorRect"]
anchor_left = 0.889
anchor_top = 0.843
anchor_right = 0.889
anchor_bottom = 0.843
margin_left = -26.7821
margin_top = -115.201
margin_right = 144.218
margin_bottom = 18.799
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Towerselector" type="Sprite" parent="GUI/ColorRect/TowerSpawn"]
position = Vector2( 76, 72 )
scale = Vector2( 0.26129, 0.225806 )
texture = ExtResource( 3 )

[node name="FireTowerv1" type="Sprite" parent="GUI/ColorRect/TowerSpawn/Towerselector"]
position = Vector2( -22.9634, 22.1428 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="GUI/ColorRect/TowerSpawn/Towerselector"]
anchor_left = 0.108
anchor_top = 0.116
anchor_right = 0.108
anchor_bottom = 0.116
margin_left = 8.61839
margin_top = -151.103
margin_right = 116.618
margin_bottom = -84.1031
custom_fonts/font = ExtResource( 133 )
text = "25gp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/ColorRect/TowerSpawn/Towerselector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -130.123
margin_top = -132.857
margin_right = -130.123
margin_bottom = -132.857
rect_scale = Vector2( 0.847556, 0.83817 )
color = Color( 0.427451, 0, 0, 0.364706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crystal_healthbar" type="TextureProgress" parent="GUI/ColorRect"]
margin_left = 375.0
margin_top = 28.0
margin_right = 699.0
margin_bottom = 69.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 15 )
texture_progress_offset = Vector2( 11, 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="GUI/ColorRect/Crystal_healthbar"]
position = Vector2( -2, 23 )
rotation = 0.00101762
scale = Vector2( 0.0748188, 0.0748188 )
frames = SubResource( 2 )
frame = 41
speed_scale = 12.0
playing = true

[node name="Label" type="Label" parent="GUI/ColorRect/Crystal_healthbar"]
margin_left = 324.0
margin_top = 15.0
margin_right = 376.0
margin_bottom = 33.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="NinePatchRect" parent="GUI/ColorRect"]
margin_left = 126.0
margin_top = 31.0
margin_right = 214.0
margin_bottom = 65.0
texture = ExtResource( 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="GUI/ColorRect/Gold"]
anchor_right = 0.114
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -11.0
margin_right = 24.968
margin_bottom = 22.0
texture = ExtResource( 129 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/ColorRect/Gold/TextureRect"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_right = 55.0
margin_bottom = 17.0

[node name="Setting_button" type="TextureButton" parent="GUI/ColorRect"]
pause_mode = 2
margin_left = 36.0
margin_top = 7.0
margin_right = 104.0
margin_bottom = 85.0
action_mode = 0
texture_normal = ExtResource( 132 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="ColorRect" parent="GUI/ColorRect/Setting_button"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -531.0
margin_right = 939.0
margin_bottom = 39.0
color = Color( 0, 0, 0, 0.427451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GUI/ColorRect/Setting_button/menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -204.5
margin_right = 167.0
margin_bottom = 204.5
texture = ExtResource( 137 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/ColorRect/Setting_button/menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -183.5
margin_right = 100.0
margin_bottom = 183.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 35.0
theme = SubResource( 5 )
text = "Game Menu"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer"]
margin_top = 39.0
margin_right = 200.0
margin_bottom = 79.0
rect_min_size = Vector2( 200, 40 )

[node name="Continue" type="TextureButton" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer"]
margin_top = 83.0
margin_right = 200.0
margin_bottom = 123.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 131 )
texture_pressed = ExtResource( 134 )
expand = true

[node name="Label" type="Label" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer/Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -10.0
margin_right = 41.5
margin_bottom = 10.0
theme = SubResource( 6 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer"]
margin_top = 127.0
margin_right = 200.0
margin_bottom = 167.0
rect_min_size = Vector2( 200, 40 )

[node name="Restart" type="TextureButton" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer"]
margin_top = 171.0
margin_right = 200.0
margin_bottom = 211.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 131 )
texture_pressed = ExtResource( 134 )
expand = true

[node name="Label" type="Label" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer/Restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -10.0
margin_right = 41.5
margin_bottom = 10.0
theme = SubResource( 6 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer"]
margin_top = 215.0
margin_right = 200.0
margin_bottom = 255.0
rect_min_size = Vector2( 200, 40 )

[node name="quit" type="TextureButton" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer"]
margin_top = 259.0
margin_right = 200.0
margin_bottom = 299.0
rect_min_size = Vector2( 40, 40 )
texture_normal = ExtResource( 131 )
texture_pressed = ExtResource( 134 )
expand = true

[node name="Label" type="Label" parent="GUI/ColorRect/Setting_button/menu/VBoxContainer/quit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -10.0
margin_right = 41.5
margin_bottom = 10.0
theme = SubResource( 6 )
text = "Quit"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "SoundEffects"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1098, 287 )
shape = SubResource( 7 )

[node name="win timer" type="Timer" parent="."]
process_mode = 0
wait_time = 140.0
one_shot = true
autostart = true

[connection signal="timeout" from="WaveTimer" to="." method="_on_WaveTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="pressed" from="GUI/ColorRect/TowerSpawn" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GUI/ColorRect/Setting_button" to="." method="_on_Setting_button_pressed"]
[connection signal="pressed" from="GUI/ColorRect/Setting_button/menu/VBoxContainer/Continue" to="GUI" method="_on_Continue_pressed"]
[connection signal="pressed" from="GUI/ColorRect/Setting_button/menu/VBoxContainer/Restart" to="GUI" method="_on_Restart_pressed"]
[connection signal="pressed" from="GUI/ColorRect/Setting_button/menu/VBoxContainer/quit" to="GUI" method="_on_quit_pressed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="win timer" to="." method="_on_win_timer_timeout"]
